chore: realizado downgrade do java para versao 8 e ajustados testes para funcionar com a versao do jUnit 4